antlr-ast/src/main/java/com/ooooo/antlr4/PlayScriptParser.java
// Generated from PlayScript.g4 by ANTLR 4.9.3

package com.ooooo.antlr4;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlayScriptParser extends Parser {

  static {
    RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
      new PredictionContextCache();
  public static final int
      T__0 = 1, T__1 = 2, T__2 = 3, BOOLEAN = 4, BREAK = 5, BYTE = 6, CASE = 7, CATCH = 8, CHAR = 9,
      CLASS = 10, CONST = 11, CONTINUE = 12, DEFAULT = 13, DO = 14, DOUBLE = 15, ELSE = 16,
      ENUM = 17, EXTENDS = 18, FINAL = 19, FINALLY = 20, FLOAT = 21, FOR = 22, IF = 23, IMPLEMENTS = 24,
      IMPORT = 25, INSTANCEOF = 26, INT = 27, INTERFACE = 28, LONG = 29, NATIVE = 30, NEW = 31,
      PACKAGE = 32, PRIVATE = 33, PROTECTED = 34, PUBLIC = 35, RETURN = 36, SHORT = 37,
      SUPER = 38, SWITCH = 39, THIS = 40, VOID = 41, WHILE = 42, IntegerLiteral = 43, FloatingPointLiteral = 44,
      BooleanLiteral = 45, CharacterLiteral = 46, StringLiteral = 47, NullLiteral = 48,
      LPAREN = 49, RPAREN = 50, LBRACE = 51, RBRACE = 52, LBRACK = 53, RBRACK = 54, SEMI = 55,
      COMMA = 56, DOT = 57, ELLIPSIS = 58, AT = 59, COLONCOLON = 60, ASSIGN = 61, GT = 62,
      LT = 63, BANG = 64, TILDE = 65, QUESTION = 66, COLON = 67, ARROW = 68, EQUAL = 69, LE = 70,
      GE = 71, NOTEQUAL = 72, AND = 73, OR = 74, INC = 75, DEC = 76, ADD = 77, SUB = 78, MUL = 79,
      DIV = 80, BITAND = 81, BITOR = 82, CARET = 83, MOD = 84, ADD_ASSIGN = 85, SUB_ASSIGN = 86,
      MUL_ASSIGN = 87, DIV_ASSIGN = 88, AND_ASSIGN = 89, OR_ASSIGN = 90, XOR_ASSIGN = 91,
      MOD_ASSIGN = 92, LSHIFT_ASSIGN = 93, RSHIFT_ASSIGN = 94, URSHIFT_ASSIGN = 95,
      Identifier = 96, WS = 97, COMMENT = 98, LINE_COMMENT = 99;
  public static final int
      RULE_literal = 0, RULE_primitiveType = 1, RULE_statement = 2, RULE_expressionStatement = 3,
      RULE_declaration = 4, RULE_initializer = 5, RULE_expression = 6, RULE_assignmentExpression = 7,
      RULE_assignmentOperator = 8, RULE_additiveExpression = 9, RULE_multiplicativeExpression = 10,
      RULE_primaryExpression = 11, RULE_argumentExpressionList = 12, RULE_compoundStatement = 13,
      RULE_blockItemList = 14, RULE_blockItem = 15;

  private static String[] makeRuleNames() {
    return new String[]{
        "literal", "primitiveType", "statement", "expressionStatement", "declaration",
        "initializer", "expression", "assignmentExpression", "assignmentOperator",
        "additiveExpression", "multiplicativeExpression", "primaryExpression",
        "argumentExpressionList", "compoundStatement", "blockItemList", "blockItem"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[]{
        null, "'Number'", "'String'", "'var'", "'boolean'", "'break'", "'byte'",
        "'case'", "'catch'", "'char'", "'class'", "'const'", "'continue'", "'default'",
        "'do'", "'double'", "'else'", "'enum'", "'extends'", "'final'", "'finally'",
        "'float'", "'for'", "'if'", "'implements'", "'import'", "'instanceof'",
        "'int'", "'interface'", "'long'", "'native'", "'new'", "'package'", "'private'",
        "'protected'", "'public'", "'return'", "'short'", "'super'", "'switch'",
        "'this'", "'void'", "'while'", null, null, null, null, null, "'null'",
        "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'...'",
        "'@'", "'::'", "'='", "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'->'",
        "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'",
        "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", "'-='", "'*='",
        "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[]{
        null, null, null, null, "BOOLEAN", "BREAK", "BYTE", "CASE", "CATCH",
        "CHAR", "CLASS", "CONST", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE",
        "ENUM", "EXTENDS", "FINAL", "FINALLY", "FLOAT", "FOR", "IF", "IMPLEMENTS",
        "IMPORT", "INSTANCEOF", "INT", "INTERFACE", "LONG", "NATIVE", "NEW",
        "PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", "SHORT", "SUPER",
        "SWITCH", "THIS", "VOID", "WHILE", "IntegerLiteral", "FloatingPointLiteral",
        "BooleanLiteral", "CharacterLiteral", "StringLiteral", "NullLiteral",
        "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA",
        "DOT", "ELLIPSIS", "AT", "COLONCOLON", "ASSIGN", "GT", "LT", "BANG",
        "TILDE", "QUESTION", "COLON", "ARROW", "EQUAL", "LE", "GE", "NOTEQUAL",
        "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR",
        "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN",
        "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN",
        "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "Identifier", "WS", "COMMENT", "LINE_COMMENT"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {return "PlayScript.g4";}

  @Override
  public String[] getRuleNames() {return ruleNames;}

  @Override
  public String getSerializedATN() {return _serializedATN;}

  @Override
  public ATN getATN() {return _ATN;}

  public PlayScriptParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  public static class LiteralContext extends ParserRuleContext {

    public TerminalNode IntegerLiteral() {return getToken(PlayScriptParser.IntegerLiteral, 0);}

    public TerminalNode FloatingPointLiteral() {return getToken(PlayScriptParser.FloatingPointLiteral, 0);}

    public TerminalNode BooleanLiteral() {return getToken(PlayScriptParser.BooleanLiteral, 0);}

    public TerminalNode CharacterLiteral() {return getToken(PlayScriptParser.CharacterLiteral, 0);}

    public TerminalNode StringLiteral() {return getToken(PlayScriptParser.StringLiteral, 0);}

    public TerminalNode NullLiteral() {return getToken(PlayScriptParser.NullLiteral, 0);}

    public LiteralContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_literal;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterLiteral(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitLiteral(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitLiteral(this);
      else return visitor.visitChildren(this);
    }
  }

  public final LiteralContext literal() throws RecognitionException {
    LiteralContext _localctx = new LiteralContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_literal);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(32);
        _la = _input.LA(1);
        if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntegerLiteral) | (1L << FloatingPointLiteral) | (1L << BooleanLiteral) | (1L << CharacterLiteral) | (1L << StringLiteral) | (1L << NullLiteral))) != 0))) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class PrimitiveTypeContext extends ParserRuleContext {

    public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_primitiveType;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterPrimitiveType(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitPrimitiveType(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitPrimitiveType(this);
      else return visitor.visitChildren(this);
    }
  }

  public final PrimitiveTypeContext primitiveType() throws RecognitionException {
    PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_primitiveType);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(34);
        _la = _input.LA(1);
        if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2))) != 0))) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class StatementContext extends ParserRuleContext {

    public ExpressionStatementContext expressionStatement() {
      return getRuleContext(ExpressionStatementContext.class, 0);
    }

    public CompoundStatementContext compoundStatement() {
      return getRuleContext(CompoundStatementContext.class, 0);
    }

    public StatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_statement;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public final StatementContext statement() throws RecognitionException {
    StatementContext _localctx = new StatementContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_statement);
    try {
      setState(38);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case IntegerLiteral:
        case FloatingPointLiteral:
        case BooleanLiteral:
        case CharacterLiteral:
        case StringLiteral:
        case NullLiteral:
        case LPAREN:
        case SEMI:
        case Identifier:
          enterOuterAlt(_localctx, 1);
        {
          setState(36);
          expressionStatement();
        }
        break;
        case LBRACE:
          enterOuterAlt(_localctx, 2);
        {
          setState(37);
          compoundStatement();
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ExpressionStatementContext extends ParserRuleContext {

    public TerminalNode SEMI() {return getToken(PlayScriptParser.SEMI, 0);}

    public ExpressionContext expression() {
      return getRuleContext(ExpressionContext.class, 0);
    }

    public ExpressionStatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_expressionStatement;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterExpressionStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitExpressionStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitExpressionStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ExpressionStatementContext expressionStatement() throws RecognitionException {
    ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_expressionStatement);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(41);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (((((_la - 43)) & ~0x3f) == 0 && ((1L << (_la - 43)) & ((1L << (IntegerLiteral - 43)) | (1L << (FloatingPointLiteral - 43)) | (1L << (BooleanLiteral - 43)) | (1L << (CharacterLiteral - 43)) | (1L << (StringLiteral - 43)) | (1L << (NullLiteral - 43)) | (1L << (LPAREN - 43)) | (1L << (Identifier - 43)))) != 0)) {
          {
            setState(40);
            expression(0);
          }
        }

        setState(43);
        match(SEMI);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class DeclarationContext extends ParserRuleContext {

    public PrimitiveTypeContext primitiveType() {
      return getRuleContext(PrimitiveTypeContext.class, 0);
    }

    public TerminalNode Identifier() {return getToken(PlayScriptParser.Identifier, 0);}

    public InitializerContext initializer() {
      return getRuleContext(InitializerContext.class, 0);
    }

    public DeclarationContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_declaration;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterDeclaration(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitDeclaration(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitDeclaration(this);
      else return visitor.visitChildren(this);
    }
  }

  public final DeclarationContext declaration() throws RecognitionException {
    DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_declaration);
    try {
      setState(52);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
        {
          setState(45);
          primitiveType();
          setState(46);
          match(Identifier);
        }
        break;
        case 2:
          enterOuterAlt(_localctx, 2);
        {
          setState(48);
          primitiveType();
          setState(49);
          match(Identifier);
          setState(50);
          initializer();
        }
        break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class InitializerContext extends ParserRuleContext {

    public AssignmentOperatorContext assignmentOperator() {
      return getRuleContext(AssignmentOperatorContext.class, 0);
    }

    public AssignmentExpressionContext assignmentExpression() {
      return getRuleContext(AssignmentExpressionContext.class, 0);
    }

    public InitializerContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_initializer;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterInitializer(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitInitializer(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitInitializer(this);
      else return visitor.visitChildren(this);
    }
  }

  public final InitializerContext initializer() throws RecognitionException {
    InitializerContext _localctx = new InitializerContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_initializer);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(54);
        assignmentOperator();
        setState(55);
        assignmentExpression();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ExpressionContext extends ParserRuleContext {

    public AssignmentExpressionContext assignmentExpression() {
      return getRuleContext(AssignmentExpressionContext.class, 0);
    }

    public ExpressionContext expression() {
      return getRuleContext(ExpressionContext.class, 0);
    }

    public TerminalNode COMMA() {return getToken(PlayScriptParser.COMMA, 0);}

    public ExpressionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_expression;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterExpression(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitExpression(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitExpression(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ExpressionContext expression() throws RecognitionException {
    return expression(0);
  }

  private ExpressionContext expression(int _p) throws RecognitionException {
    ParserRuleContext _parentctx = _ctx;
    int _parentState = getState();
    ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
    ExpressionContext _prevctx = _localctx;
    int _startState = 12;
    enterRecursionRule(_localctx, 12, RULE_expression, _p);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      {
        {
          setState(58);
          assignmentExpression();
        }
        _ctx.stop = _input.LT(-1);
        setState(65);
        _errHandler.sync(this);
        _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
        while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            if (_parseListeners != null) triggerExitRuleEvent();
            _prevctx = _localctx;
            {
              {
                _localctx = new ExpressionContext(_parentctx, _parentState);
                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                setState(60);
                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                setState(61);
                match(COMMA);
                setState(62);
                assignmentExpression();
              }
            }
          }
          setState(67);
          _errHandler.sync(this);
          _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  public static class AssignmentExpressionContext extends ParserRuleContext {

    public AdditiveExpressionContext additiveExpression() {
      return getRuleContext(AdditiveExpressionContext.class, 0);
    }

    public TerminalNode Identifier() {return getToken(PlayScriptParser.Identifier, 0);}

    public AssignmentOperatorContext assignmentOperator() {
      return getRuleContext(AssignmentOperatorContext.class, 0);
    }

    public AssignmentExpressionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_assignmentExpression;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterAssignmentExpression(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitAssignmentExpression(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitAssignmentExpression(this);
      else return visitor.visitChildren(this);
    }
  }

  public final AssignmentExpressionContext assignmentExpression() throws RecognitionException {
    AssignmentExpressionContext _localctx = new AssignmentExpressionContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_assignmentExpression);
    try {
      setState(73);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
        {
          setState(68);
          additiveExpression(0);
        }
        break;
        case 2:
          enterOuterAlt(_localctx, 2);
        {
          setState(69);
          match(Identifier);
          setState(70);
          assignmentOperator();
          setState(71);
          additiveExpression(0);
        }
        break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class AssignmentOperatorContext extends ParserRuleContext {

    public TerminalNode ASSIGN() {return getToken(PlayScriptParser.ASSIGN, 0);}

    public TerminalNode MUL_ASSIGN() {return getToken(PlayScriptParser.MUL_ASSIGN, 0);}

    public TerminalNode DIV_ASSIGN() {return getToken(PlayScriptParser.DIV_ASSIGN, 0);}

    public TerminalNode MOD_ASSIGN() {return getToken(PlayScriptParser.MOD_ASSIGN, 0);}

    public TerminalNode ADD_ASSIGN() {return getToken(PlayScriptParser.ADD_ASSIGN, 0);}

    public TerminalNode SUB_ASSIGN() {return getToken(PlayScriptParser.SUB_ASSIGN, 0);}

    public TerminalNode LSHIFT_ASSIGN() {return getToken(PlayScriptParser.LSHIFT_ASSIGN, 0);}

    public TerminalNode RSHIFT_ASSIGN() {return getToken(PlayScriptParser.RSHIFT_ASSIGN, 0);}

    public TerminalNode URSHIFT_ASSIGN() {return getToken(PlayScriptParser.URSHIFT_ASSIGN, 0);}

    public TerminalNode AND_ASSIGN() {return getToken(PlayScriptParser.AND_ASSIGN, 0);}

    public TerminalNode XOR_ASSIGN() {return getToken(PlayScriptParser.XOR_ASSIGN, 0);}

    public TerminalNode OR_ASSIGN() {return getToken(PlayScriptParser.OR_ASSIGN, 0);}

    public AssignmentOperatorContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {return RULE_assignmentOperator;}

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).enterAssignmentOperator(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof PlayScriptListener) ((PlayScriptListener) listener).exitAssignmentOperator(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof PlayScriptVisitor) return ((PlayScriptVisitor<? extends T>) visitor).visitAssignmentOperator(this);
      else return visitor.visitChildren(this);
    }
  }

  public final AssignmentOperatorContext assignmentOperator() throws RecognitionException {
    AssignmentOperatorContext _localctx = new AssignmentOperatorContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_assignmentOperator);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(75);
        _la = _input.LA(1);
        if (!(((((_la - 61)) & ~0x3f) == 0 && ((1L << (_la - 61)) & ((1L << (ASSIGN - 61)) | (1L << (ADD_ASSIGN - 61)) | (1L << (SUB_ASSIGN - 61)) | (1L << (MUL_ASSIGN - 61)) | (1L << (DIV_ASSIGN - 61)) | (1L << (AND_ASSIGN - 61)) | (1L << (OR_ASSIGN - 61)) | (1L << (XOR_ASSIGN - 61)) | (1L << (MOD_ASSIGN - 61)) | (1L << (LSHIFT_ASSIGN - 61)) | (1L << (RSHIFT_ASSIGN - 61)) | (1L << (URSHIFT_ASSIGN - 61)))) != 0))) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class AdditiveExpressionContext extends ParserRuleContext {

    public MultiplicativeExpressionContext multiplicativeExpression() {
      return getRuleContext(MultiplicativeExpressionContext.class, 0);
    }

    public AdditiveExpressionContext additiveExpression() {
      return getRuleContext(AdditiveExpressionContext.class, 0);
    }

    public TerminalNode ADD() {return getToken(PlayScriptParser.ADD, 0);}
